fix: Scrolling in PWA on iOS doesn't work

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -84,3 +84,20 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+/* Fix ios pwa scrolling problem */
+:root                  { box-sizing: border-box; }
+*, *::before, *::after { box-sizing: inherit; }
+
+:root, body {
+  margin: 0;
+  padding: 0;
+  border: initial;
+}
+
+body {
+  overflow: hidden;
+  width: 100lvw;
+  height: 100lvh;
+}
